update swagger add more logs
